== Change log

All notable changes to this project will be documented in this file.

The format is based on http://keepachangelog.com/[Keep a Changelog]
and this project adheres to http://semver.org/[Semantic Versioning].

=== Unreleased

=== [0.6.0] - 2017-11-28
==== Added
* Closed [#3](https://github.com/berkowski/mio-serial/pull/3) Reexport serialport::Error for error handling without importing serialport crate.
  Thanks @Idanko

=== [0.5.0] - 2017-04-15
==== Added
* Added [trust](https://github.com/japaric/trust) based ci

==== Changed 
* Changed license back to MIT now that `serialport-rs` is MPL-2.0
* Bumped `serialport-rs` dependency to 1.0

=== [0.4.0] - 2017-02-13
==== Changed
* Changed to LGPL-3 for compliance with `serialport` dependency.

=== [0.3.0] - 2017-02-13 [YANKED]
==== Added
* Bumped `serialport` dependency to 0.9