@@ -5,8 +5,8 @@
 //! **At this time this crate ONLY provides a unix implementation**
 //!
 //! ## Links
-//!   - repo:  https://github.com/berkowski/mio-serial
-//!   - docs:  https://docs.rs/mio-serial
+//!   - repo:  <https://github.com/berkowski/mio-serial>
+//!   - docs:  <https://docs.rs/mio-serial>
 #![cfg(unix)]
 #![deny(missing_docs)]
 
@@ -30,7 +30,9 @@ pub use serialport::{// Traits
                      StopBits,
                      Parity,
                      BaudRate,
-                     FlowControl};
+                     FlowControl,
+                     ErrorKind,
+};
 
 // Some enumeration functions from the serialport crate
 pub use serialport::available_ports;
@@ -47,4 +49,3 @@ pub use unix::Serial;
 
 /// A type for results generated by interacting with serial ports.
 pub type Result<T> = serialport::Result<T>;
-pub use serialport::{Error, ErrorKind};
