@@ -6,6 +6,8 @@ The format is based on http://keepachangelog.com/[Keep a Changelog]
 and this project adheres to http://semver.org/[Semantic Versioning].
 
 === Unreleased
+==== Changed
+* Bumped [serialport-rs](https://gitlab.com/susurrus/serialport-rs) to 2.0
 
 === [0.6.0] - 2017-11-28
 ==== Added
